[gd_scene load_steps=25 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/robot_demo_L.png" type="Texture" id=2]
[ext_resource path="res://player/Demente_sem_fundo.png" type="Texture" id=3]
[ext_resource path="res://audio/sound_jump.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/sound_shoot.wav" type="AudioStream" id=5]
[ext_resource path="res://player/osb_left.png" type="Texture" id=6]
[ext_resource path="res://player/osb_right.png" type="Texture" id=7]
[ext_resource path="res://player/osb_jump.png" type="Texture" id=8]
[ext_resource path="res://player/osb_fire.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "crouch"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=2]
resource_name = "falling"
length = 0.1
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Mood:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -34, -8.853 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "falling_attack"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Mood:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 100, -8.853 ), Vector2( -34, -8.853 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=5]
length = 3.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.25, 1.5, 2, 4.5, 4.75, 5, 5.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 16, 19, 20, 19, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Mood:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 4 ), Vector2( 0, -4 ), Vector2( 0, 4 ), Vector2( 0, -4 ), Vector2( 0, 4 ), Vector2( 0, -4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Mood:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -34, -8.853 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle_attack"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.25, 1.5, 2, 4.5, 4.75, 5, 5.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 16, 19, 20, 19, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Mood:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 4 ), Vector2( 0, -4 ), Vector2( 0, 4 ), Vector2( 0, -4 ), Vector2( 0, 4 ), Vector2( 0, -4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Mood:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 100, -8.853 ), Vector2( -34, -8.853 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}

[sub_resource type="Animation" id=8]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Mood:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -34, -8.853 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "jumping_attack"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Mood:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 100, -8.853 ), Vector2( -34, -8.853 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=11]
length = 0.95
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 0, 4, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Mood:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 4 ), Vector2( 0, -4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 5, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Mood:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -34, -8.853 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "run_attack"
length = 0.95
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 0, 4, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Mood:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 4 ), Vector2( 0, -4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 5, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Mood:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 100, -8.853 ), Vector2( -34, -8.853 ) ]
}

[sub_resource type="Animation" id=13]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 5 ]
}

[sub_resource type="Animation" id=14]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 5 ]
}

[sub_resource type="CapsuleShape2D" id=15]
height = 25.1542

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 2
hframes = 16
frame = 16

[node name="Mood" type="Sprite" parent="Sprite"]
modulate = Color( 1, 1, 1, 0.470588 )
position = Vector2( -34, -8.853 )
scale = Vector2( 0.359084, 0.321829 )
texture = ExtResource( 3 )
offset = Vector2( 0, 1.6 )
flip_h = true

[node name="Smoke" type="Node2D" parent="Sprite"]
visible = false
position = Vector2( 20.7312, 3.21187 )
rotation = -1.45648

[node name="BulletShoot" type="Position2D" parent="Sprite"]
visible = false
position = Vector2( 18.659, 6.132 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/crouch = SubResource( 1 )
anims/falling = SubResource( 2 )
anims/falling_attack = SubResource( 3 )
anims/falling_weapon = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/idle_attack = SubResource( 6 )
anims/idle_weapon = SubResource( 7 )
anims/jumping = SubResource( 8 )
anims/jumping_attack = SubResource( 9 )
anims/jumping_weapon = SubResource( 10 )
anims/run = SubResource( 11 )
anims/run_attack = SubResource( 12 )
anims/run_weapon = SubResource( 13 )
anims/standing_weapon_ready = SubResource( 14 )

[node name="Camera" type="Camera2D" parent="."]
visible = false
current = true
limit_left = 0
limit_top = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.65198, 9.43184 )
shape = SubResource( 15 )

[node name="SoundJump" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 4 )

[node name="SoundShoot" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource( 5 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 0

[node name="Left" type="TouchScreenButton" parent="UI"]
visible = false
position = Vector2( 27.7593, 360.87 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 6 )
passby_press = true
action = "move_left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="UI"]
visible = false
position = Vector2( 121.542, 361.415 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 7 )
passby_press = true
action = "move_right"
visibility_mode = 1

[node name="Jump" type="TouchScreenButton" parent="UI"]
visible = false
position = Vector2( 666.224, 359.02 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 8 )
action = "jump"
visibility_mode = 1

[node name="Fire" type="TouchScreenButton" parent="UI"]
visible = false
position = Vector2( 668.073, 262.788 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 9 )
action = "shoot"
visibility_mode = 1
